d.2016/01/06.15_35_10.81.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   ZGame/DX9/dx9_pipeline/DX9_Pipeline.png

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/06.17_07_18.44.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   History.txt
	new file:   ZGame/DX9/dx9_pipeline/DirectX Rendering Pipeline.mht
	new file:   ZGame/HardWare/Graphics Card/CardCaps.xls

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/07.20_15_57.44.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/07.20_40_51.93.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/11.11_02_36.66.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/13.09_42_31.10.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt
