@@ -105,7 +105,7 @@
       L963, 44:R#.34   @腿长和车架上管计算公式 腿长*0.65=上管cm，例子 75*0.65=48.75cm
       L972, 45:R#.35   @svn E155037 以前的操作没有完成
       L980, 46:R#.36   @matrix 操作
-     Zndex_E : //z 2016-01-11 10:46:50 L.355'47590 T2285402218.K ~1135+----+----+----+----+----+
+     Zndex_E : //z 2016-01-14 13:21:01 L.352'38339 T2065691269.K ~1138+----+----+----+----+----+
      TimeCnt : //z 2016-01-07 20:36:13 L.359'12227 T122349006 .K ~70  +----+----+----+----+----+
      Reg.Cnt : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44  +----+----+----+----+----+
      #44  R+ : //z 2015-12-15 17:48:47 L.16 '22273 T832936990 .K ~44    V+.1104 L+.1169 
@@ -156,7 +156,7 @@
      #3   O+ : //z 2015-09-04 21:24:47 L.118'9313  T3067438199.K ~3     V+.731  L+.1    
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2016-01-11 10:46:50 L.355'47590 T2285402218.K ~1179  R+.27   L+.788  --+----+
+     Version : //z 2016-01-14 13:21:01 L.352'38339 T2065691269.K ~1182  R+.41   L+.1188 --+----+
      #62  V+ : //z 2016-01-11 10:46:38 L.355'47602 T2285402160.K ~1178  R+.27   L+.788  
      #61  V+ : //z 2016-01-11 10:28:16 L.355'48704 T2283102124.K ~1159  R+.27   L+.775  
      #60  V+ : //z 2016-01-07 20:11:46 L.359'13694 T119797581 .K ~1140  R+.27   L+.748  
@@ -1184,6 +1184,9 @@ Intel® GPA Frame Analyzer
 
 Deferred Shading in DirectX 10 (with Ambient Occlusion)
 http://blog.shayanjaved.com/2011/06/26/deferred-shading-dx10/
+
+shaderx 6 subvision 例子 2016-01-14 13:21
+svn checkout http://rendervista.googlecode.com/svn/trunk/ rendervista
 #endregion //z 2015-12-04 11:46:13 L.27 '44027 BG57IV3@XCL T3663712269.K.F4146951713-+----+----+
 
 #region 12-07 14:04 R#.42   @NVIDIA Professional Graphics Samples
